# app/chat/admin/internal/server/http.go
@@ -1,9 +1,11 @@
 package server
 
 import (
+	"context"
 	"github.com/go-kratos/kratos/v2/log"
 	"github.com/go-kratos/kratos/v2/middleware/auth/jwt"
 	"github.com/go-kratos/kratos/v2/middleware/recovery"
+	"github.com/go-kratos/kratos/v2/middleware/selector"
 	"github.com/go-kratos/kratos/v2/middleware/validate"
 	"github.com/go-kratos/kratos/v2/transport/http"
 	"github.com/go-kratos/swagger-api/openapiv2"
@@ -14,15 +16,30 @@ import (
 	"github.com/869413421/micro-chat/app/chat/admin/internal/service"
 )
 
+// NewWhiteListMatcher 白名单匹配器
+func NewWhiteListMatcher() selector.MatchFunc {
+	whiteList := make(map[string]struct{})
+	whiteList["/api.chat.admin.v1.ChatAdmin/Login"] = struct{}{}
+	whiteList["/api.chat.admin.v1.ChatAdmin/CreateUser"] = struct{}{}
+	return func(ctx context.Context, operation string) bool {
+		if _, ok := whiteList[operation]; ok {
+			return false
+		}
+		return true
+	}
+}
+
 // NewHTTPServer new an HTTP server.
 func NewHTTPServer(c *conf.Server, ac *conf.Auth, svc *service.ChatAdmin, logger log.Logger) *http.Server {
 	var opts = []http.ServerOption{
 		http.Middleware(
 			recovery.Recovery(),
-			validate.Validator(), // 验证中间件
-			jwt.Server(func(token *jwt2.Token) (interface{}, error) {
-				return []byte(ac.JwtSecret), nil
-			}),
+			validate.Validator(),
+			selector.Server(
+				jwt.Server(func(token *jwt2.Token) (interface{}, error) {
+					return []byte(ac.JwtSecret), nil
+				}),
+			).Match(NewWhiteListMatcher()).Build(), // 验证中间件
 		),
 	}
 	if c.Http.Network != "" {
